--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ globaltrajectory_log/
 globaltrajectory_yonly_log/
 posebridge_inference_log/
 posebridge_eval_log/
+pretrained_models/
+pretrained_model/
+visualize/
